{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 36,
  "lineage": "5a4fa784-4edc-4997-c54e-342d0a04e207",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d56f4c48ee78204",
            "arn": "arn:aws:ec2:ap-south-1:614520203262:elastic-ip/eipalloc-07d56f4c48ee78204",
            "domain": "vpc",
            "id": "eipalloc-07d56f4c48ee78204",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-81-20.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.81.20",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:internet-gateway/igw-0710f3b4e7817606a",
            "id": "igw-0710f3b4e7817606a",
            "owner_id": "614520203262",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-igw"
            },
            "vpc_id": "vpc-066e5185d2987a08b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:loadbalancer/app/ecs-assignment-alb/5121d9c7f2ae6029",
            "arn_suffix": "app/ecs-assignment-alb/5121d9c7f2ae6029",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-assignment-alb-1127384403.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:loadbalancer/app/ecs-assignment-alb/5121d9c7f2ae6029",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-assignment-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0a33fe82be199aa25"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09bea9b5077d41af3"
              },
              {
                "subnet_id": "subnet-0f83eea05bc4481c8"
              }
            ],
            "subnets": [
              "subnet-09bea9b5077d41af3",
              "subnet-0f83eea05bc4481c8"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-alb"
            },
            "vpc_id": "vpc-066e5185d2987a08b",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:loadbalancer/app/ecs-assignment-alb/5121d9c7f2ae6029"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:listener/app/ecs-assignment-alb/5121d9c7f2ae6029/b944b1f3a276db81",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:targetgroup/ecs-assignment-tg/7eca170db008aced",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:listener/app/ecs-assignment-alb/5121d9c7f2ae6029/b944b1f3a276db81",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:loadbalancer/app/ecs-assignment-alb/5121d9c7f2ae6029",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:listener/app/ecs-assignment-alb/5121d9c7f2ae6029/b944b1f3a276db81"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.ecs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:targetgroup/ecs-assignment-tg/7eca170db008aced",
            "arn_suffix": "targetgroup/ecs-assignment-tg/7eca170db008aced",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:targetgroup/ecs-assignment-tg/7eca170db008aced",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-assignment-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-066e5185d2987a08b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:targetgroup/ecs-assignment-tg/7eca170db008aced"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d56f4c48ee78204",
            "association_id": "eipassoc-0d210fafa4d47c3fc",
            "connectivity_type": "public",
            "id": "nat-0f8d6f0368a4f2b3f",
            "network_interface_id": "eni-0e5a20e538597c01e",
            "private_ip": "10.0.1.21",
            "public_ip": "65.1.81.20",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09bea9b5077d41af3",
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-nat-gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:route-table/rtb-0d14660d29bbe6f13",
            "id": "rtb-0d14660d29bbe6f13",
            "owner_id": "614520203262",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f8d6f0368a4f2b3f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-066e5185d2987a08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614520203262",
            "id": "rtb-0d14660d29bbe6f13",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:route-table/rtb-0f10ad5e8b5a0a48e",
            "id": "rtb-0f10ad5e8b5a0a48e",
            "owner_id": "614520203262",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0710f3b4e7817606a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-066e5185d2987a08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614520203262",
            "id": "rtb-0f10ad5e8b5a0a48e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0a79eeb6e565581",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d14660d29bbe6f13",
            "subnet_id": "subnet-0d092d52b2bd3fdbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ef99f842f03231d",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d14660d29bbe6f13",
            "subnet_id": "subnet-0f2290cab98b233bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0080d300982d5b41b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f10ad5e8b5a0a48e",
            "subnet_id": "subnet-09bea9b5077d41af3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cf192a943e99a40",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f10ad5e8b5a0a48e",
            "subnet_id": "subnet-0f83eea05bc4481c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:security-group/sg-0a33fe82be199aa25",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a33fe82be199aa25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-assignment-alb20250919062135610700000001",
            "name_prefix": "ecs-assignment-alb",
            "owner_id": "614520203262",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066e5185d2987a08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614520203262",
            "id": "sg-0a33fe82be199aa25",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:security-group/sg-018e76bbaaf2a59cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018e76bbaaf2a59cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a33fe82be199aa25"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ecs-assignment-ecs-instances20250919062137195300000003",
            "name_prefix": "ecs-assignment-ecs-instances",
            "owner_id": "614520203262",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-ecs-instances-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-ecs-instances-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066e5185d2987a08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614520203262",
            "id": "sg-018e76bbaaf2a59cb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:security-group/sg-003b34b9d338cb2da",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-003b34b9d338cb2da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018e76bbaaf2a59cb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ecs-assignment-rds20250919062138574700000004",
            "name_prefix": "ecs-assignment-rds",
            "owner_id": "614520203262",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066e5185d2987a08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614520203262",
            "id": "sg-003b34b9d338cb2da",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_instances",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-0d092d52b2bd3fdbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d092d52b2bd3fdbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-private-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-private-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-066e5185d2987a08b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614520203262",
            "id": "subnet-0d092d52b2bd3fdbb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-0f2290cab98b233bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2290cab98b233bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-private-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-private-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-066e5185d2987a08b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614520203262",
            "id": "subnet-0f2290cab98b233bf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-09bea9b5077d41af3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bea9b5077d41af3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-public-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-public-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-066e5185d2987a08b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614520203262",
            "id": "subnet-09bea9b5077d41af3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-0f83eea05bc4481c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f83eea05bc4481c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-public-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-public-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-066e5185d2987a08b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614520203262",
            "id": "subnet-0f83eea05bc4481c8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:vpc/vpc-066e5185d2987a08b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7446c61a533f275",
            "default_route_table_id": "rtb-010ed917362df0b0d",
            "default_security_group_id": "sg-0b4752652a31d3dc8",
            "dhcp_options_id": "dopt-0df28c3c04682cd6b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066e5185d2987a08b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010ed917362df0b0d",
            "owner_id": "614520203262",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "ecs-assignment-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecs-assignment-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}